Set colors, changed placement of divs and sections for easier styling

--- a/index.html
+++ b/index.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
-    />
     <title>Salesboard</title>
     <link rel="stylesheet" href="index.css" />
   </head>
-
   <body>
     <div class="container">
+    <header>
       <h1>Salesboard 🔔</h1>
-      <div>
         <img src="./images/business-cat.png" alt="A headshot of a black cat
-        wearing a blue and yellow plaid tie>
-      </div>
+        wearing a blue and yellow plaid tie" />
       <section class="button-container">
-        <button class="button-star" id="button-star"></button>
-        <button class="button-fire" id="button-fire"></button>
+        <button class="button-star" id="button-star">⭐</button>
+        <button class="button-fire" id="button-fire">🔥</button>
       </section>
+    </header>
       <main>
         <section>
           <h2>Live Sales</h2>
