--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="An app used to track a user's sales." />
+
     <title>Salesboard</title>
     <link rel="stylesheet" href="index.css" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔥</text></svg>"
+    />
   </head>
   <body>
     <div class="container">
-    <header>
-      <h1>Salesboard 🔔</h1>
-        <img src="./images/business-cat.png" alt="A headshot of a black cat
-        wearing a blue and yellow plaid tie" />
-      <section class="button-container">
-        <button class="button-star" id="button-star">⭐</button>
-        <button class="button-fire" id="button-fire">🔥</button>
-      </section>
-    </header>
+      <header>
+        <h1>Salesboard 🔔</h1>
+        <img
+          src="./images/business-cat.png"
+          alt="A headshot of a black cat
+        wearing a blue and yellow plaid tie"
+        />
+        <section class="button-container">
+          <button class="button-star" id="button-star">⭐</button>
+          <button class="button-fire" id="button-fire">🔥</button>
+        </section>
+      </header>
       <main>
         <section>
           <h2>Live Sales</h2>
