Completed basic styling

--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
         </section>
       </header>
       <main>
-        <section>
+        <section class="sales">
           <h2>Live Sales</h2>
-          <div class="sales-field" id="sales-field"></div>
+          <div class="emoji-field" id="sales-field"></div>
         </section>
-        <section>
+        <section class="achievements">
           <h2>Live Achievements</h2>
-          <div class="achievements-field" id="achievements-field"></div>
+          <div class="emoji-field" id="achievements-field"></div>
         </section>
-        <section>
-          <div>
+        <section class="dollar-amounts">
+          <div class="revenue">
             <h2>Total Revenue</h2>
-            <div class="revinue-field" id="revinue-field"></div>
+            <div class="dollar-field" id="revinue-field">$0</div>
           </div>
-          <div>
+          <div class="comission">
             <h2>Total Commision</h2>
-            <div class="commision-field" id="commision-field"></div>
+            <div class="dollar-field" id="commision-field">$0</div>
           </div>
         </section>
       </main>
