--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Salesboard App</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="container">
       <h1>Salesboard 🔔</h1>
+    </div>
+    <img src="images/picture.jpg" />
+    <div class="product-btn-container">
+      <div class="product-btn-star"></div>
+      <div class="product-btn-fire"></div>
     </div>
     <script src="index.js"></script>
   </body>
