Added a class to the h1 salesboard so I could edit the font-sizing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <div class="salesboard">
-      <h1>Salesboard 🔔</h1>
+      <h1 class="salesboard-title">Salesboard 🔔</h1>
       <img src="images/picture.jpg" alt="Picture of a man" />
 
       <div class="product-btn-container">
