--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,40 +12,41 @@
   <link rel="stylesheet" href="index.css" />
 </head>
 
-  <body>
-    <div class="salesboard">
-      <h1 class="salesboard-title">Salesboard 🔔</h1>
-      <img class="salesboard-picture" src="images/picture.jpg" alt="Picture of a man" />
+<body>
+  <div class="salesboard">
+    <h1 class="salesboard-title">Salesboard 🔔</h1>
+    <img class="salesboard-picture" src="images/picture.jpg" alt="Picture of a man" />
 
-      <div class="product-btn-container">
-        <button id="btn-productA">⭐</button>
-        <button id="btn-productB">🔥</button>
-      </div><!--product-btn-container-->
+    <div class="product-btn-container">
+      <button id="btn-productA">⭐</button>
+      <button id="btn-productB">🔥</button>
+    </div><!--product-btn-container-->
 
-      <div class="sales-container">
-        <h3 class="sales title" id="sales-header">Live Sales -</h3>
-        <div class="sales-bar bar" id="sales-bar"></div><!--sales-bar-->
-      </div><!--sales-container-->
+    <div class="sales-container">
+      <h3 class="sales title" id="sales-header">Live Sales -</h3>
+      <div class="sales-bar bar" id="sales-bar"></div><!--sales-bar-->
+    </div><!--sales-container-->
 
-      <div class="achievements-container">
-        <h3 class="achievements title" id="achievements-header">Live Achievements -</h3>
-        <div class="achievements-bar bar" id="achievements-bar"></div><!--achievements-bar-->
-      </div><!--achievements-container-->
+    <div class="achievements-container">
+      <h3 class="achievements title" id="achievements-header">Live Achievements -</h3>
+      <div class="achievements-bar bar" id="achievements-bar"></div><!--achievements-bar-->
+    </div><!--achievements-container-->
 
-      <div class="revenue-container">
-        <div class="total-revenue">
-          <h3 class="revenue title">Total Revenue</h3>
-          <div class="revenue-bar bar" id="revenue-bar"></div><!--revenue-bar-->
-        </div><!--total-revenue-->
+    <div class="revenue-container">
+      <div class="total-revenue">
+        <h3 class="revenue title">Total Revenue</h3>
+        <div class="revenue-bar bar" id="revenue-bar"></div><!--revenue-bar-->
+      </div><!--total-revenue-->
 
-        <div class="total-commission">
-          <h3 class="commission title">Total Commission</h3>
-          <div class="commission-bar bar" id="commision-bar"></div><!--commission-bar-->
-        </div><!--total-commission-->
-      </div><!--revenue-container-->
-    </div><!--salesboard-->
-  
-  </body>
-    <script src="index.js"></script>
-  </body>
+      <div class="total-commission">
+        <h3 class="commission title">Total Commission</h3>
+        <div class="commission-bar bar" id="commission-bar"></div><!--commission-bar-->
+      </div><!--total-commission-->
+    </div><!--revenue-container-->
+  </div><!--salesboard-->
+
+</body>
+<script src="index.js"></script>
+</body>
+
 </html>
