--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
   <div class="salesboard">
-    <h1 class="salesboard-title">Salesboard 🔔</h1>
-    <img class="salesboard-picture" src="images/picture.jpg" alt="Picture of a man" />
+    <h1>Salesboard 🔔</h1>
+    <img src="images/picture.jpg" alt="Picture of a man" />
 
     <div class="product-btn-container">
       <button id="btn-productA">⭐</button>
@@ -23,23 +23,23 @@
     </div><!--product-btn-container-->
 
     <div class="sales-container">
-      <h3 class="sales title" id="sales-header">Live Sales -</h3>
+      <h3 id="sales-header">Live Sales -</h3>
       <div class="sales-bar bar" id="sales-bar"></div><!--sales-bar-->
     </div><!--sales-container-->
 
     <div class="achievements-container">
-      <h3 class="achievements title" id="achievements-header">Live Achievements -</h3>
+      <h3 id="achievements-header">Live Achievements -</h3>
       <div class="achievements-bar bar" id="achievements-bar"></div><!--achievements-bar-->
     </div><!--achievements-container-->
 
     <div class="revenue-container">
       <div class="total-revenue">
-        <h3 class="revenue title">Total Revenue</h3>
+        <h3>Total Revenue</h3>
         <div class="revenue-bar bar" id="revenue-bar"></div><!--revenue-bar-->
       </div><!--total-revenue-->
 
       <div class="total-commission">
-        <h3 class="commission title">Total Commission</h3>
+        <h3>Total Commission</h3>
         <div class="commission-bar bar" id="commission-bar"></div><!--commission-bar-->
       </div><!--total-commission-->
     </div><!--revenue-container-->
