Update: Calculated Total Revenue and updated HTML content for the total-revenue

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <div class="total">
         <div>
           <h3>Total Revenue</h3>
-          <div class="revenue-box total-box highlight"></div>
+          <p class="revenue-box total-box highlight" id="total-revenue"></p>
         </div>
         <div>
           <h3>Total Commission</h3>
-          <div class="commission-box total-box highlight"></div>
+          <p class="commission-box total-box highlight"></p>
         </div>
       </div>
     </div>
