Update: calculated total commission and updated html for total commission

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
         </div>
         <div>
           <h3>Total Commission</h3>
-          <p class="commission-box total-box highlight"></p>
+          <p
+            class="commission-box total-box highlight"
+            id="total-commission"
+          ></p>
         </div>
       </div>
     </div>
