--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css" />
+  <script src="https://kit.fontawesome.com/00433d45e7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div class="salesboard">
     <h1>Salesboard 🔔</h1>
+    <i class="fa-solid fa-sun toggle-mode"></i>
     <img src="images/picture.jpg" alt="Picture of a man" />
 
     <div class="product-btn-container">
