--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="https://kit.fontawesome.com/00433d45e7.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="light">
   <div class="salesboard">
     <h1>Salesboard 🔔</h1>
     <i class="fa-solid fa-sun toggle-mode"></i>
